# GeneScope

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MONITORING_RECOVERY.md  Makefile  QUICKSTART.md  README.md  README_UV_QUICKSTART.md  UV_MIGRATION_GUIDE.md  __init__.py  alembic.ini  benchmark_uv.py  complete_setup_uv.bat  conftest.py  coverage.xml  create-new-frontend.sh  cypress.config.js  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.yml  fix_frontend.sh  install_deps.sh  install_winget.ps1  interface.py  main.py  migrate_to_uv.py  mypy.ini  pyproject.toml  pytest.ini  quick_fix_and_start.bat  quick_start.py  quick_start.sh  quick_uv_setup.bat  requirements.py  requirements.txt  run_tests.py  run_worker.py  (+9 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
1.GenoScope/: README.md  interface.py  requirements.py  requirements.txt
1.GenoScope/MLmodel/data_cleaning_AI/: ml_imputation.py
1.GenoScope/data_analysis/: __init__.py  analysis_core.py  data_cleaning.py  data_filtering.py  data_ingestion.py  sequence_analysis.py  visualization.py
1.GenoScope/data_analysis/DataIngestionFunc/: auto_gff_loader.py  gff_enhanced.py
1.GenoScope/data_analysis/data_filters/: filter_expression.py  filter_meta_epi.py  filter_ngs.py  filter_variants.py
MLmodel/data_cleaning_AI/: ml_imputation.py
MLmodel/model/: __init__.py
bioforge_core/: Cargo.toml  README.md  pyproject.toml
bioforge_core/src/: alignment.rs  fastq.rs  lib.rs  utils.rs  variants.rs
bioinformatics_tools/: README.md  __init__.py  base_tool.py  bioforge_integration.py  config.py  validators.py
bioinformatics_tools/assembly/: __init__.py  megahit.py  spades.py
bioinformatics_tools/classification/: __init__.py  gtdb_tk.py
bioinformatics_tools/docker/: Dockerfile.kraken2  Dockerfile.megahit  docker-compose.yml
bioinformatics_tools/metagenomics/: __init__.py  kraken2.py  metagraph.py  taxonomy.py
bioinformatics_tools/ml_models/: __init__.py  enformer.py  xtrimopglm.py
cypress/: package.json
cypress/e2e/: genoscope.cy.js
data/datasets/: dataset_2.parquet  dataset_3.parquet  dataset_4.parquet  demo.parquet
data/references/: test_reference.fasta  test_reference.fasta.ann  test_reference.fasta.bwt  test_reference.fasta.pac  test_reference.fasta.sa
data/reports/: report_2.html  report_3.html  report_4.html
data_analysis/: __init__.py  analysis_core.py  data_cleaning.py  data_filtering.py  data_ingestion.py  sequence_analysis.py  visualization.py
data_analysis/DataIngestionFunc/: auto_gff_loader.py  gff_enhanced.py
data_analysis/data_filters/: filter_expression.py  filter_meta_epi.py  filter_ngs.py  filter_variants.py  pipeline.py
deployment/: .env.example  Dockerfile  docker-compose.yml  mypy.ini
diagnostics/: ANALYSIS_REPORT.md  auto_fix.py  final_fix.py  final_fixes_report.txt  full_diagnostic.py  quick_test.py  run_diagnostic.py
docs/: API.md  BIOFORGE_INTEGRATION.md  BIOINFORMATICS_TOOLS.md  DEVELOPMENT.md  FINAL_PROJECT_ANALYSIS.md  INSTALLATION.md  PARALLEL_PROCESSING.md  PERFORMANCE_OPTIMIZATION.md  README.md
examples/: api_usage.py  bioforge_workflows.py  performance_examples.py
frontend/: .gitignore  README.md  main_large.py  package-lock.json  package.json  start.bat  start.sh  start_frontend.sh
frontend/src/: App.tsx
frontend/src/hooks/: useAuth.ts  useTheme.ts
frontend/src/pages/: Analysis.tsx  ApiDocs.tsx  Billing.tsx  Compare.tsx  Dashboard.tsx  Datasets.tsx  GenomicsAnalysis.tsx  Help.tsx  Login.tsx  Pipeline.tsx  Projects.tsx  QuickRun.tsx  References.tsx  Reports.tsx  Results.tsx  Samples.tsx  Search.tsx  Settings.tsx  Storage.tsx  Usage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css  theme.ts
genoscope/: __init__.py  interface.py  requirements.txt
genoscope/data_analysis/: _typing.py  analysis_core.py  data_cleaning.py  data_filtering.py  data_ingestion.py  sequence_analysis.py  visualization.py
genoscope/data_analysis/DataIngestionFunc/: auto_gff_loader.py  gff_enhanced.py
genoscope/data_analysis/data_cleaning/: __init__.py  data_cleaning_ml.py  data_cleaning_statistic.py
genoscope/data_analysis/data_filters/: filter_expression.py  filter_meta_epi.py  filter_ngs.py  filter_variants.py  pipeline.py
genoscope/mlmodel/data_cleaning_AI/: ml_imputation.py
genoscope/tests/: test_filtering.py  test_load_csv.py  test_ml_imputation.py
genoscope/tests/data_ingestion/: test_csv.py
genoscope/tools/: find_todos.py
genoscope/utils/: columns.py  outlier_utils.py
helm/genoscope/: Chart.yaml  values.yaml
k8s/base/: deployment.yaml
migrations/: env.py
migrations/versions/: 01b33d143451_initial_bioforge_models.py  a8b65a5db1b4_add_variants_table.py  b9c4e5f6a7d8_add_result_data_to_jobs.py
monitoring/: alert_rules.yml  docker-compose.yml  prometheus.yml
monitoring/grafana/dashboards/: application.json
performance/: README.md  __init__.py  bioforge_optimized.py  cache.py  distributed.py  gpu.py  monitoring.py  optimizer.py  parallel.py  streaming.py
scripts/: backup.sh  bioforge_final_report.py  enhance_bioforge.py  health_check.py  run_api.py  run_api_local.py  run_genoscope.py  run_simulation_test.py  run_tests.sh
src/bioforge/: __init__.py  main.py
src/genoscope/: __init__.py  main.py  requirements.in
tests/: conftest.py  test_api_endpoints.py  test_basic.py  test_cleaning.py  test_comprehensive.py  test_data_validation.py  test_filtering.py  test_framework.py  test_main.py  test_ml_imputation.py  test_ngs_filter.py  test_performance.py  test_pipeline.py  test_security.py  test_simple.py  test_variants_filter.py
tests/bioinformatics_tools/: __init__.py  test_bioforge_integration.py  test_validators.py
tests/integration/: final_status.py  quick_parallel_test.py  test_api.py
tests/performance/: __init__.py  locustfile.py  test_parallel_demo.py
tests/unit/: test_qc.py  test_setup.py  test_variant_calling.py
tools/: requirements.py
uploads/: 0efade57-ae00-4211-a233-dc12d0e61d10_biological_data.csv
utils/: logging_helpers.py  outlier_utils.py
(+133 files in other folders)
