[tool.poetry]
name = "genoscope"
version = "0.3.0"
description = "High-performance toolkit for biological data analysis with integrated bioinformatics tools"
authors = ["RageBober <dzumenov@gmail.com>"]
readme = "README.md"

# NOTE: Project uses flat layout (no src/ directory)
# All code is in root-level modules: data_analysis/, mlmodel/, bioinformatics_tools/, performance/
packages = [
    { include = "data_analysis" },
    { include = "mlmodel" },
    { include = "bioinformatics_tools" },
    { include = "performance" },
    { include = "utils" },
]

[tool.poetry.dependencies]
python = "^3.11"

# основные библиотеки (из requirements.txt / .in)
pandas = "^2.3"
numpy = "^1.26"
scikit-learn = "^1.3"
pytest = "^8.3"
cyvcf2 = "^0.31"
biopython = "^1.81"
requests = "^2.32"
openpyxl = "^3.1"
pysam = { version = "^0.22", optional = true }   # тяжёлые C-расширения можно пометить optional
h5py   = { version = "^3.12", optional = true }
gffutils = { version = "^0.13", optional = true }
dask = "2025.2"
matplotlib = "^3.9"
seaborn = "^0.13"

# Bioinformatics tools integration (optional)
docker = { version = "^7.0", optional = true }
redis = { version = "^5.0", optional = true }

# High-performance computing (optional)
ray = { version = "^2.9", optional = true }  # Distributed computing
distributed = { version = "^2024.2", optional = true }  # Dask distributed
cudf-cu11 = { version = "^24.2", optional = true }  # GPU DataFrames (NVIDIA only)
cuml-cu11 = { version = "^24.2", optional = true }  # GPU ML (NVIDIA only)
numba = { version = "^0.59", optional = true }  # JIT compilation
psutil = "^5.9"  # System monitoring (always included)

[tool.poetry.extras]
io   = ["pysam", "h5py"]     # poetry install --extras "io"
gff  = ["gffutils"]
biotools = ["docker", "redis"]  # For bioinformatics tools integration

# Performance extras
performance = ["ray", "distributed", "numba", "redis"]  # CPU performance
gpu = ["cudf-cu11", "cuml-cu11"]  # GPU acceleration (requires NVIDIA GPU)
full = ["pysam", "h5py", "gffutils", "docker", "redis", "ray", "distributed", "numba"]  # Everything except GPU


[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
black = "^24.4"
mypy = "^1.10"
pytest-cov = "^6.1"
pipreqs = "^0.4"             # для автогенерации requirements.in/lock
mutmut = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=src --cov-report=term-missing --import-mode=importlib"

testpaths = ["genoscope/tests"]

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"

[tool.coverage.run]
source = ["genoscope"]