[project]
name = "bioforge"
version = "2.0.0"
description = "Genomic Analysis Platform - DNA sequence processing, variant calling, and clinical interpretation"
authors = [{name = "Alfer", email = "alfer@bioforge.dev"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["bioinformatics", "genomics", "variant-calling", "dna-analysis", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    
    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    
    # Redis & Task Queue
    "redis>=5.2.0",
    "arq>=0.26.0",
    
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.3.0",
    
    # File handling
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.12",
    
    # Serialization
    "orjson>=3.10.0",
    "msgspec>=0.18.0",
    
    # HTTP client
    "httpx>=0.27.0",
    
    # Email validation (for Pydantic EmailStr)
    "email-validator>=2.2.0",
    
    # Observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    
    # Bioinformatics (basic)
    "biopython>=1.84",
    
    # Data processing
    "polars>=1.14.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
bio = [
    # Full bioinformatics stack
    "pysam>=0.22.0",
    "pyvcf3>=1.0.3",
    "pybedtools>=0.10.0",
    "gffutils>=0.13",
]

ml = [
    "scikit-learn>=1.5.0",
    "torch>=2.0.0",
]

[project.scripts]
bioforge = "bioforge.main:main"

[project.urls]
Homepage = "https://github.com/RageBober/GeneScope"
Repository = "https://github.com/RageBober/GeneScope"
Documentation = "https://github.com/RageBober/GeneScope#readme"

# ─────────────────────────────────────────────────────────────────────────────
# uv Configuration
# ─────────────────────────────────────────────────────────────────────────────

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "maturin>=1.7.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# Build System
# ─────────────────────────────────────────────────────────────────────────────

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bioforge"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# ─────────────────────────────────────────────────────────────────────────────
# Testing
# ─────────────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

# ─────────────────────────────────────────────────────────────────────────────
# Linting & Formatting (Ruff)
# ─────────────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "RUF",    # Ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default arg (FastAPI Depends)
    "S101",   # assert usage (fine in tests)
    "S104",   # binding to all interfaces
]

[tool.ruff.lint.isort]
known-first-party = ["bioforge"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

# ─────────────────────────────────────────────────────────────────────────────
# Type Checking (MyPy)
# ─────────────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "arq.*",
    "biopython.*",
    "Bio.*",
    "polars.*",
]
ignore_missing_imports = true

# ─────────────────────────────────────────────────────────────────────────────
# Coverage
# ─────────────────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src/bioforge"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
