[package]
name = "bioforge-core"
version = "0.1.0"
edition = "2021"
description = "High-performance bioinformatics core for BioForge"
license = "MIT"

[lib]
name = "bioforge_core"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# Bioinformatics
noodles = { version = "0.83", features = ["bam", "sam", "vcf", "bcf", "fasta", "fastq"] }
bio = "2.0"
needletail = "0.5"

# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "fs", "io-util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Compression
flate2 = "1.0"

# Parallelism
rayon = "1.10"

# Logging
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
