[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "bioforge-core"
version = "0.1.0"
description = "High-performance bioinformatics core for BioForge (Rust)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["bioinformatics", "genomics", "fastq", "bam", "vcf", "rust"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "bioforge_core"
